# CodeGen-CLI

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  behavior.md  call_tools.py  history.json  main.py  output.py  pyproject.toml  system_prompt.py  system_prompt.txt
codegen_cli/: call_tools.py  cli.py  conversation_memory.py  faq.py  main.py  output.py  repl.py  tools_registry.py
codegen_cli/config/: behavior.md  system_prompt.md  system_prompt.txt
codegen_cli/models/: schema.py
codegen_cli/tools/: bash.py  delete.py  edit.py  glob.py  grep.py  ls.py  multiedit.py  python_check.py  python_run.py  read.py  task.py  todowrite.py  webfetch.py  websearch.py  write.py
docs/: README.md
tools/: bash.py  edit.py  exitplanmode.py  glob.py  grep.py  ls.py  multiedit.py  read.py  task.py  todowrite.py  webfetch.py  websearch.py  write.py
